yamls/adguard-home/adguard-home-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: adguard-home
spec:
  ingressClassName: nginx
  rules:
    - host: homeserver-adguard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home
                port:
                  number: 3000
