yamls/adguard-home/adguard-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-tailscale-ingress
  namespace: adguard-home
spec:
  defaultBackend:
    service:
      name: adguard-home
      port:
        number: 3000
  tls:
    - hosts:
        - adguard
  ingressClassName: tailscale
